feat: added swagger UI to API's
