# app/routes/routes.js
@@ -43,5 +43,5 @@ module.exports = (app) => {
     app.get('/notes/:notesId', tokenCheck.tokenChecker, notesController.getNotesByIdApi);
 
     //update note by Id api - PUT request
-    app.put('/notes/:notesId', tokenCheck.tokenChecker, notesController.UpdateNotesByIdApi);
+    app.put('/note/:notesId', tokenCheck.tokenChecker, notesController.UpdateNotesByIdApi);
 }
